--- a/views/productDetails.hbs
+++ b/views/productDetails.hbs
@@ -164,18 +164,22 @@
           </button>
 
           <!-- Topbar Search -->
-          <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+          <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+            action="/search" method="POST">
             <div class="input-group">
-              <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+              <input type="text" class="form-control bg-light border-0 small searchInput" placeholder="Search for..."
                 aria-label="Search" aria-describedby="basic-addon2">
+
               <div class="input-group-append">
                 <button class="btn btn-primary" type="button">
                   <i class="fas fa-search fa-sm"></i>
                 </button>
               </div>
-            </div>
-          </form>
 
+            </div>
+
+
+          </form>
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
 
@@ -190,8 +194,8 @@
                 aria-labelledby="searchDropdown">
                 <form class="form-inline mr-auto w-100 navbar-search">
                   <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                      aria-label="Search" aria-describedby="basic-addon2">
+                    <input type="text" class="form-control bg-light border-0 small searchInput"
+                      placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
                     <div class="input-group-append">
                       <button class="btn btn-primary" type="button">
                         <i class="fas fa-search fa-sm"></i>
@@ -199,6 +203,12 @@
                     </div>
                   </div>
                 </form>
+
+                <div class="dropdown-menu dropdown-search" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
               </div>
             </li>
 
@@ -484,7 +494,7 @@
   <script src="./../../vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="./../../js/sb-admin-2.min.js"></script>
+  <script src="./../../js/sb-admin-2.js"></script>
 
   <!-- Page level plugins -->
   <script src="./../../vendor/chart.js/Chart.min.js"></script>
