--- a/views/search.hbs
+++ b/views/search.hbs
@@ -12,14 +12,14 @@
   <title>{{title}}</title>
 
   <!-- Custom fonts for this template-->
-  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="./../css/sb-admin-2.min.css" rel="stylesheet">
-  <link rel='stylesheet' href='./../css/style.css' />
+  <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link rel='stylesheet' href='css/style.css' />
 
 </head>
 
@@ -168,10 +168,10 @@
             action="/search" method="POST">
             <div class="input-group">
               <input type="text" class="form-control bg-light border-0 small searchInput" placeholder="Search for..."
-                aria-label="Search" aria-describedby="basic-addon2">
+                aria-label="Search" name="searchInput" aria-describedby="basic-addon2">
 
               <div class="input-group-append">
-                <button class="btn btn-primary" type="button">
+                <button class="btn btn-primary" type="button" onClick="submit">
                   <i class="fas fa-search fa-sm"></i>
                 </button>
               </div>
@@ -180,6 +180,7 @@
 
 
           </form>
+
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
 
@@ -203,12 +204,6 @@
                     </div>
                   </div>
                 </form>
-
-                <div class="dropdown-menu dropdown-search" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
               </div>
             </li>
 
@@ -332,7 +327,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Tu Tran</span>
-                <img class="img-profile rounded-circle" src="./../img/profile.jpg">
+                <img class="img-profile rounded-circle" src="./img/profile.jpg">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -366,12 +361,88 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">{{title}} Dashboard</h1>
+            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
           </div>
 
-          <!-- /.row -->
+          <!-- Content Row -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="panel panel-default container-fluid">
+                <div class="panel-heading">
+                  Products List
+                </div>
+                <!-- /.panel-heading -->
+                <div id="dataTables-example_wrapper" class="dataTables_wrapper no-footer">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <table width="100%"
+                        class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline collapsed"
+                        id="dataTables-example" role="grid" aria-describedby="dataTables-example_info"
+                        style="width: 100%;">
+                        <thead>
+                          <tr role="row">
+                            <th class="sorting_asc" tabindex="0" aria-controls="dataTables-example" rowspan="1"
+                              colspan="1" aria-sort="ascending" aria-label="#: activate to sort column descending"
+                              style="width: 18px;">#</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              aria-label="Name: activate to sort column ascending" style="width: 50px;">Name</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              aria-label="Thumbnail: activate to sort column ascending" style="width: 80px;">Thumbnail
+                            </th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              aria-label="Description: activate to sort column ascending" style="width: 78px;">
+                              Description</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              aria-label="Category ID: activate to sort column ascending" style="width: 61px;">Category
+                              ID</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              aria-label="Sale Price: activate to sort column ascending" style="width: 35px;">Sale Price
+                            </th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              aria-label="Original Price: activate to sort column ascending" style="width: 53px;">
+                              Original Price</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              style="width: 53px;">Product Images</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
+                              style="width: 53px;">Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {{#each product }}
+                          <tr role="row">
+                            <td>{{ @index }}</td>
+                            <td>{{ name }}</td>
+                            <td><img src="{{thumbnail}}" alt="an image of {{name}}" width="100">
+                            </td>
+                            <td>{{ shortDescription }}</td>
+                            <td>{{ categoryId }}</td>
+                            <td class="text-right">{{ salePrice }}</td>
+                            <td class="text-right">{{
+                          originalPrice
+                        }}</td>
+                            <td>
+                              <img src="{{image}}" alt="{{name}}" width="100">
+                            </td>
+                            <td>
+                              <a href="/admin/products/{{_id}}">Details</a>
+                            </td>
+                          </tr>
+                          {{/each }}
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+                <!-- /.panel-body -->
+              </div>
+              <!-- /.panel -->
+            </div>
+            <!-- /.col-lg-12 -->
+          </div>
+
+
           <div class="row">
             <div class="col-lg-12">
               <div class="panel panel-default">
@@ -395,7 +466,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      {{#each users}}
+                      {{#each user}}
                       <tr>
                         <td>{{ _id }}</td>
                         <td><img src="{{avatar}}" alt="{{lastName}} {{firstName}}" width="50"></td>
@@ -417,7 +488,8 @@
               <!-- /.panel -->
             </div>
             <!-- /.col-lg-12 -->
-          </div> <!-- /.container-fluid -->
+          </div>
+          <!-- /.container-fluid -->
 
         </div>
         <!-- End of Main Content -->
@@ -464,21 +536,21 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="./../vendor/jquery/jquery.min.js"></script>
-    <script src="./../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="./../vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="./../js/sb-admin-2.js"></script>
+    <script src="js/sb-admin-2.js"></script>
 
     <!-- Page level plugins -->
-    <script src="./../vendor/chart.js/Chart.min.js"></script>
+    <script src="vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="./../js/demo/chart-area-demo.js"></script>
-    <script src="./../js/demo/chart-pie-demo.js"></script>
+    <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-pie-demo.js"></script>
 
 </body>
 
