--- a/views/search.hbs
+++ b/views/search.hbs
@@ -164,14 +164,15 @@
           </button>
 
           <!-- Topbar Search -->
-          <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-            action="/search" method="POST">
+          <form id="searchForm"
+            class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+            action="/search">
             <div class="input-group">
               <input type="text" class="form-control bg-light border-0 small searchInput" placeholder="Search for..."
                 aria-label="Search" name="searchInput" aria-describedby="basic-addon2">
 
               <div class="input-group-append">
-                <button class="btn btn-primary" type="button" onClick="submit">
+                <button class="btn btn-primary" type="submit" form="searchForm" value="Submit">
                   <i class="fas fa-search fa-sm"></i>
                 </button>
               </div>
@@ -369,7 +370,7 @@
           <!-- Content Row -->
           <div class="row">
             <div class="col-lg-12">
-              <div class="panel panel-default container-fluid">
+              <div class="panel panel-default">
                 <div class="panel-heading">
                   Products List
                 </div>
