--- a/views/productCreate.hbs
+++ b/views/productCreate.hbs
@@ -12,14 +12,14 @@
   <title>{{title}}</title>
 
   <!-- Custom fonts for this template-->
-  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="./../css/sb-admin-2.min.css" rel="stylesheet">
-  <link rel='stylesheet' href='./../css/style.css' />
+  <link href="./../../../css/sb-admin-2.min.css" rel="stylesheet">
+  <link rel='stylesheet' href='./../../../css/style.css' />
 
 </head>
 
@@ -333,7 +333,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Tu Tran</span>
-                <img class="img-profile rounded-circle" src="./../img/profile.jpg">
+                <img class="img-profile rounded-circle" src="./../../img/profile.jpg">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -368,146 +368,138 @@
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">{{title}} Dashboard</h1>
-            <a href="products/create/" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                class="fas fa-download fa-sm text-white-50"></i> Create new product</a>
+            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
           </div>
 
           <!-- Content Row -->
           <div class="row">
             <div class="col-lg-12">
-              <div class="panel panel-default container-fluid">
-                <div class="panel-heading">
-                  Products List
-                </div>
-                <!-- /.panel-heading -->
-                <div id="dataTables-example_wrapper" class="dataTables_wrapper no-footer">
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <table width="100%"
-                        class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline collapsed"
-                        id="dataTables-example" role="grid" aria-describedby="dataTables-example_info"
-                        style="width: 100%;">
-                        <thead>
-                          <tr role="row">
-                            <th class="sorting_asc" tabindex="0" aria-controls="dataTables-example" rowspan="1"
-                              colspan="1" aria-sort="ascending" aria-label="#: activate to sort column descending"
-                              style="width: 18px;">#</th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              aria-label="Name: activate to sort column ascending" style="width: 50px;">Name</th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              aria-label="Thumbnail: activate to sort column ascending" style="width: 80px;">Thumbnail
-                            </th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              aria-label="Description: activate to sort column ascending" style="width: 78px;">
-                              Description</th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              aria-label="Category ID: activate to sort column ascending" style="width: 61px;">Category
-                              ID</th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              aria-label="Sale Price: activate to sort column ascending" style="width: 35px;">Sale Price
-                            </th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              aria-label="Original Price: activate to sort column ascending" style="width: 53px;">
-                              Original Price</th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              style="width: 53px;">Product Images</th>
-                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"
-                              style="width: 53px;">Actions</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          {{#each products }}
-                          <tr role="row">
-                            <td>{{ @index }}</td>
-                            <td>{{ name }}</td>
-                            <td><img src="{{thumbnail}}" alt="an image of {{name}}" width="100">
-                            </td>
-                            <td>{{ shortDescription }}</td>
-                            <td>{{ categoryId }}</td>
-                            <td class="text-right">{{ salePrice }}</td>
-                            <td class="text-right">{{
-                          originalPrice
-                        }}</td>
-                            <td>
-                              <img src="{{image}}" alt="{{name}}" width="100">
-                            </td>
-                            <td>
-                              <a href="/admin/products/{{_id}}">Details</a>
-                            </td>
-                          </tr>
-                          {{/each }}
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.panel-body -->
-              </div>
-              <!-- /.panel -->
+              <h1 class="page-header">{{ product.name }}</h1>
             </div>
             <!-- /.col-lg-12 -->
-          </div> <!-- /.container-fluid -->
+          </div>
+          <!-- /.row -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="panel panel-default">
+                <div class="panel-heading">Product details</div>
+                <div class="panel-body">
+                  <form action="" method="post" enctype="multipart/form-data" id="language">
+                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                      <thead>
+                        <tr>
+                          <th>ID</th>
+                          <th>Name</th>
+                          <th>Image</th>
+                          <th>Short Description</th>
+                          <th>CategoryId</th>
+                          <th>Sale Price</th>
+                          <th>Original Price</th>
+                          <th>Thumbnail</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Product's Id will be automatically generated</td>
+                          <td>
+                            <input type="text" class="form-control bg-light border-0 small productDetailsInput"
+                              placeholder="Product name" aria-label="productCreate" name="name"
+                              aria-describedby="basic-addon2">
+                          </td>
 
-        </div>
-        <!-- End of Main Content -->
+                          <td> <input type="file" id="productImage" name="image" class="form-control-file border"></td>
+                          <td> <input type="text" class="form-control bg-light border-0 small productDetailsInput"
+                              placeholder="Product's short description" aria-label="productCreate"
+                              name="shortDescription" aria-describedby="basic-addon2"></td>
+                          <td>
+                            <select name="categoryId" class="productDetailsInput">
+                              {{#each categories }}
+                              <option value={{name}}>{{name}}</option>
+                              {{/each }}
+                            </select></td>
+                          <td><input type="number" class="form-control bg-light border-0 small productDetailsInput"
+                              placeholder="Product's Sale Price" aria-label="productSalePrice" name="salePrice"
+                              aria-describedby="basic-addon2"></td>
+                          <td><input type="number" class="form-control bg-light border-0 small productDetailsInput"
+                              placeholder="Product's Original Price" aria-label="productOriginalPrice"
+                              name="originalPrice" aria-describedby="basic-addon2"></td>
+                          <td> <input type="file" id="productThumbnail" name="thumbnail"
+                              class="form-control-file border"></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <input type="submit" class="btn btn-primary" value="Create new product">
+                  </form>
+                </div>
+              </div>
 
-        <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-          <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Phoenix 2019</span>
+
             </div>
           </div>
-        </footer>
-        <!-- End of Footer -->
+          <!-- /.col-lg-12 -->
+        </div> <!-- /.container-fluid -->
 
       </div>
-      <!-- End of Content Wrapper -->
+      <!-- End of Main Content -->
+
+      <!-- Footer -->
+      <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+          <div class="copyright text-center my-auto">
+            <span>Copyright &copy; Phoenix 2019</span>
+          </div>
+        </div>
+      </footer>
+      <!-- End of Footer -->
 
     </div>
-    <!-- End of Page Wrapper -->
+    <!-- End of Content Wrapper -->
 
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-    </a>
+  </div>
+  <!-- End of Page Wrapper -->
 
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login">Logout</a>
-          </div>
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+
+  <!-- Logout Modal-->
+  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          <a class="btn btn-primary" href="login">Logout</a>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="./../vendor/jquery/jquery.min.js"></script>
-    <script src="./../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript-->
+  <script src="./../../../vendor/jquery/jquery.min.js"></script>
+  <script src="./../../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="./../vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Core plugin JavaScript-->
+  <script src="./../../../vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
-    <script src="./../js/sb-admin-2.js"></script>
+  <!-- Custom scripts for all pages-->
+  <script src="./../../../js/sb-admin-2.js"></script>
 
-    <!-- Page level plugins -->
-    <script src="./../vendor/chart.js/Chart.min.js"></script>
+  <!-- Page level plugins -->
+  <script src="./../../../vendor/chart.js/Chart.min.js"></script>
 
-    <!-- Page level custom scripts -->
-    <script src="./../js/demo/chart-area-demo.js"></script>
-    <script src="./../js/demo/chart-pie-demo.js"></script>
+  <!-- Page level custom scripts -->
+  <script src="./../../../js/demo/chart-area-demo.js"></script>
+  <script src="./../../../js/demo/chart-pie-demo.js"></script>
 
 </body>
 
